# market_analysis

./: .gitignore  Dockerfile  README.md  fmp_client.py  generate.py  ghost_client.py  main.py  pyproject.toml  requirements.txt  scraper.py
prompts/: US_market_analysis.txt  email_template.html  tg_template.html
resource/: sp500_stock.xlsx  treasury.xlsx
